--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=airBnbApp
 
 #DB Configuration
 spring.datasource.url = jdbc:postgresql://localhost:5432/airBnb
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
+
+# For Base controller
+server.servlet.context-path = /api/v1
 
